# ir_search_engine_2024

./: README.md  main.py  mid.py  pyproject.toml  requirements.txt  weight1_backup.txt  weight2_backup.txt
AI_module/: AI_module.py
API/: research.py
data/: 0801_012.txt  0801_012.wrd  0801_025.txt  0801_025.wrd  0801_047.txt  0801_047.wrd  0801_051.txt  0801_051.wrd  0801_052.txt  0801_052.wrd  0801_073.txt  0801_073.wrd  0801_092.txt  0801_092.wrd  0801_115.txt  0801_115.wrd  0801_130.txt  0801_130.wrd  0801_132.txt  0801_132.wrd  0801_137.txt  0801_137.wrd  0801_143.txt  0801_143.wrd  0801_177.txt  0801_177.wrd  0801_191.txt  0801_191.wrd  0801_212.txt  0801_212.wrd  0801_226.txt  0801_226.wrd  0801_257.txt  0801_257.wrd  0801_258.txt  0801_258.wrd  0801_259.txt  0801_259.wrd  0801_314.txt  0801_314.wrd  (+161 more)
